# noun-o-clock

./: Dockerfile  README.md  main.py  pyproject.toml  render.yaml  settings.py
contracts/: 0x4b10701Bfd7BFEdc47d50562b76b436fbB5BdB3B.json
helpers/: cloudinary.py  newshades.py  nounoclock.py  nouns.py  subgraph.py  timer.py  w3.py
