[tool.poetry]
name = "noun-o-clock"
version = "0.1.0"
description = ""
authors = ["prego <pedropregueiro@gmail.com>"]
license = "cc0"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.29.2"
requests = "^2.27.1"
cloudinary = "^1.29.0"
python-dotenv = "^0.20.0"
gql = {extras = ["aiohttp"], version = "^3.4.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py39"]
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/'

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "app"
skip = ".git,.mypy_cache,.venv,.pytest_cache,.vscode,__pycache__"
